namespace ObserverPatter
{
    public interface IObserver
    {
        public void update();
    }
}